[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colserve"
version = "0.0.1"
description = "Late-interaction visual document retrieval. Coming soon."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Sammy Han", email = "hello@colserve.dev" }]
keywords = [
    "colpali",
    "colqwen2",
    "colsmol",
    "late-interaction",
    "vector-search",
    "rag",
    "visual-rag",
    "document-ai",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://colserve.dev"
Repository = "https://github.com/colserve/colserve"
Issues = "https://github.com/colserve/colserve/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["colserve*"]
